--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,6 +1,27 @@
+# HTTP - redirect all traffic to HTTPS
 server {
     listen 80;
-    server_name 18.216.110.111;  # Add your domain/IP
+    server_name fp8.ai www.fp8.ai;
+    return 301 https://$host$request_uri;
+}
+
+# HTTPS configuration
+server {
+    listen 443 ssl;
+    server_name fp8.ai www.fp8.ai;
+
+    # SSL certificate locations
+    ssl_certificate /etc/letsencrypt/live/fp8.ai/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/fp8.ai/privkey.pem;
+
+    # SSL configuration
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+    ssl_prefer_server_ciphers on;
+
+    # SSL session configuration
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 10m;
 
     location / {
         root /usr/share/nginx/html;
