change to nginx.conf

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,14 +1,14 @@
 # HTTP - redirect all traffic to HTTPS
 server {
     listen 80;
-    server_name fp8.ai www.fp8.ai;
+    server_name fp8.ai www.fp8.ai 18.216.110.111;
     return 301 https://$host$request_uri;
 }
 
 # HTTPS configuration
 server {
     listen 443 ssl;
-    server_name fp8.ai www.fp8.ai;
+    server_name fp8.ai www.fp8.ai 18.216.110.111;
 
     # SSL certificate locations
     ssl_certificate /etc/letsencrypt/live/fp8.ai/fullchain.pem;
