--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -13,6 +13,8 @@ services:
       - backend
     volumes:
       - /etc/letsencrypt:/etc/letsencrypt:ro
+      - ./frontend/nginx.conf:/etc/nginx/conf.d/default.conf
+      
 
   backend:
     build:
